6.0.016 (2013-05-15)
	- The tcpdf_addfont.php tool was improved (thanks to Remi Collet).

6.0.015 (2013-05-14)
	- Some unused vars were removed from AddFont() method.
	- Some directories were moved inside the examples directory.
	- All examples were updated to reflect the new default structure.
	- Source code were clean-up up to be more compatible with system packaging.
	- Files encodings and permissions were reset.
	- The command line tool tcpdf_addfont.php was added on the tools directory.

6.0.014 (2013-04-13)
	- The signature of addTTFfont() method includes a new parameter to link existing fonts instead of copying and compressing them.

6.0.013 (2013-04-10)
	- Add support for SVG dx and dy text/tspan attributes.
	- replace require() with require_once().
	- fix some minor typos on documentation.
	- fix a problem when deleting all pages.

6.0.012 (2013-04-24)
	- An error condition in addHtmlLink() method was fixed (bug #799).

6.0.011 (2013-04-22)
	- Minor documentation changes.

6.0.010 (2013-04-03)
	- The method Rect() was fixed to print borders correctly.

6.0.009 (2013-04-02)
	- Adding back some files that were not properly committed on the latest release.

6.0.008 (2013-04-01)
	- Duplicated encoding maps was removed from tcpdf_font_data.php.
	- Fixing bug on AddTTFFont().

6.0.007 (2013-03-29)
	- HTML/CSS font size conversion were improved.

6.0.006 (2013-03-27)
	- Bug related to SVG and EPS files on xobjects were fixed.

6.0.005 (2013-03-26)
	- Default font path was fixed.

6.0.004 (2013-03-21)
	- Return value of addTTFfont() method was fixed.

6.0.003 (2013-03-20)
	- A bug related to non-unicode mode was fixed.

6.0.002 (2013-03-18)
	- _getFIXED call on tcpdf_fonts.php was fixed.

6.0.001 (2013-03-18)
	- Fixed $uni_type call on tcpdf.php.

6.0.000 (2013-03-17)
	- IMPORTANT: PHP4 support has been removed starting from this version.